# revup

./: .env  .revup  Cargo.toml  LICENSE  README.md  envup.sh  example.rev
.github/workflows/: ci.yml
spinup/: package.json  spinup.js
src/: main.rs
