[package]
name = "revup"
version = "0.2.0"
edition = "2018"
authors = ["RadGuild"]
description = "Resim rapid instantiator"
license = "MIT"
homepage = "https://github.com/RadGuild/revup"
repository = "https://github.com/RadGuild/revup"
keywords = ["scrypto", "radix", "cli", "resim", "revup"]
categories = [
  "cryptography::cryptocurrencies",
  "development-tools",
  "command-line-utilities"
]
readme = "README.md"
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md",
  "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json="1.0.59"
