[package]
name = "revup"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json="1.0.59"
simple-server="0.4.0"
percent-encoding="2.1.0"